Compiler/tests/bad/array2.nx
type a : array 2 of [minint .. maxint];

val x : a filled by 0;

print(x[7]);